3 files modified, 2 added

--- a/index.html
+++ b/index.html
@@ -7,6 +7,22 @@
     <title>Vite App</title>
   </head>
   <body>
+  <div class="anime">
+    <div class="headband">
+        <div class="star"></div>
+        <div class="raduga"></div><div class="finn"></div>
+        <div class="center_main">
+            <h1 class="white">Арт Галерея</h1>
+            <hr class="line_h">
+            <h2 class="white">Антоненко Анатолий</h2>
+        </div>
+        <div class="cloud_2"></div>
+        <div class="cloud_1"></div>
+      </div>
+  </div>
+
+<div class="bg_white">
+  
     <div id="app"></div>
     <script type="module" src="/main.js"></script>
   </body>
