--- a/index.html
+++ b/index.html
@@ -7,15 +7,11 @@
     <title>Vite App</title>
   </head>
   <body>
+  <span class="DocSearch-Button-Keys"><kbd class="DocSearch-Button-Key">⌘</kbd><kbd class="DocSearch-Button-Key DocSearch-Button-Key-pressed">1</kbd></span>
   <div class="anime">
     <div class="headband">
         <div class="star"></div>
-        <div class="raduga"></div><div class="finn"></div>
-        <div class="center_main">
-            <h1 class="white">Арт Галерея</h1>
-            <hr class="line_h">
-            <h2 class="white">Антоненко Анатолий</h2>
-        </div>
+        <div class="raduga"></div><div class="cat"></div>
         <div class="cloud_2"></div>
         <div class="cloud_1"></div>
       </div>
