--- a/index.html
+++ b/index.html
@@ -1,25 +1,48 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite App</title>
-  </head>
-  <body>
-  <span class="DocSearch-Button-Keys"><kbd class="DocSearch-Button-Key">⌘</kbd><kbd class="DocSearch-Button-Key DocSearch-Button-Key-pressed">1</kbd></span>
-  <div class="anime">
-    <div class="headband">
-        <div class="star"></div>
-        <div class="raduga"></div><div class="cat"></div>
-        <div class="cloud_2"></div>
-        <div class="cloud_1"></div>
-      </div>
-  </div>
+	<head>
+		<meta charset="UTF-8" />
+		<link rel="icon" type="image/svg+xml" href="/vite.svg" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<title>Vite App</title>
+	</head>
+	<body>
+		<div class="anime">
+			<div class="headband">
+				<div class="star"></div>
+				<div class="raduga"></div>
+				<div class="cat"></div>
+				<div class="cloud_2"></div>
+				<div class="cloud_1"></div>
+			</div>
+		</div>
 
-<div class="bg_white">
-  
-    <div id="app"></div>
-    <script type="module" src="/main.js"></script>
-  </body>
+		<div class="hud-panel">
+			<div class="hud-buttons">
+				<span class="DocSearch-Button-Keys">
+					<kbd class="DocSearch-Button-Key">1</kbd>
+					<kbd class="DocSearch-Button-Key">2</kbd>
+					<kbd class="DocSearch-Button-Key">3</kbd>
+					<kbd class="DocSearch-Button-Key">4</kbd>
+					<kbd class="DocSearch-Button-Key">5</kbd>
+					<kbd class="DocSearch-Button-Key">6</kbd>
+					<kbd class="DocSearch-Button-Key">7</kbd>
+					<kbd class="DocSearch-Button-Key">8</kbd>
+					<kbd class="DocSearch-Button-Key">9</kbd>
+					<kbd class="DocSearch-Button-Key">10</kbd>
+					<kbd class="DocSearch-Button-Key">11</kbd>
+					<kbd class="DocSearch-Button-Key">12</kbd>
+					<kbd class="DocSearch-Button-Key">13</kbd>
+					<kbd class="DocSearch-Button-Key">14</kbd>
+					<kbd class="DocSearch-Button-Key">15</kbd>
+					<kbd class="DocSearch-Button-Key">16</kbd>
+
+          
+
+          
+				</span>
+			</div>
+		</div>
+		<script type="module" src="/main.js"></script>
+	</body>
 </html>
